--- a/src/pages/form.module.scss
+++ b/src/pages/form.module.scss
@@ -20,7 +20,7 @@ textarea {
   border: none;
   border-radius: 1px;
   width: 25%;
-    outline: 1px solid rgba(52, 73, 94, 0.3);
+  outline: 1px solid rgba(195, 199, 202, 0.3);
 
   &:focus {
   outline: 1px solid rgb(179, 172, 172);
@@ -40,6 +40,7 @@ select {
 select {
   font-family: "Open Sans", monospace;
   appearance: none;
+  // angle-down icon TODO: invert color for dark mode
   background: $field-background
     url("data:image/svg+xml;utf8,<svg viewBox='0 0 140 140' width='15' height='15' xmlns='http://www.w3.org/2000/svg'><g><path d='m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z'/></g></svg>")
     no-repeat;
